# wirefox

./: .gitattributes  .gitignore  .p4ignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  appveyor.yml
cmake/: CompilerSpecific.cmake  Findsodium.cmake  Macros.cmake  PrecompiledHeader.cmake  SampleProjectSetup.cmake
cmake/Compiler/: GCC.cmake  MSVC.cmake
cmake/Platform/: Linux.cmake  Windows.cmake
docs/md/: Encryption.md  GettingStarted.md  MainPage.md  TutorialReceive.md  TutorialSend.md  WireFormat.md
examples/: CMakeLists.txt
examples/Battleships/: Board.cs  BoardPosition.cs  CMakeLists.txt  Client.cs  FormConnect.Designer.cs  FormConnect.cs  FormGame.Designer.cs  FormGame.cs  FormGame.resx  GameCommand.cs  Program.cs  Server.cs  Ship.cs  ShipType.cs  ShotResult.cs
examples/Battleships/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx
examples/Chat/: CMakeLists.txt  ChatClient.cpp  ChatClient.h  ChatServer.cpp  ChatServer.h  Main.cpp  Shared.h
examples/FileCopy/: CMakeLists.txt  Main.cpp
examples/HelloWorld/: CMakeLists.txt  Main.cpp
examples/LanDiscovery/: CMakeLists.txt  Main.cpp
extras/WirefoxCSharp/: CMakeLists.txt  Channel.cs  Enumerations.cs  JetBrains.Annotations.cs  NativeMethods.cs  Packet.cs  Peer.cs  PeerID.cs
extras/WirefoxCSharp/Properties/: AssemblyInfo.cs
include/: CMakeLists.txt  Wirefox.h
include/wirefox/: BinaryStream.h  Channel.h  Enumerations.h  Factory.h  Packet.h  PeerAbstract.h  PeerStats.h  Serializable.h  WirefoxCBindings.h  WirefoxConfig.h  WirefoxTime.h
source/: AuthenticatorSodium.cpp  AuthenticatorSodium.h  AwaitableEvent.cpp  AwaitableEvent.h  BinaryStream.cpp  CMakeLists.txt  Channel.cpp  ChannelBuffer.cpp  ChannelBuffer.h  CongestionControl.cpp  CongestionControl.h  CongestionControlWindow.cpp  CongestionControlWindow.h  DatagramBuilder.cpp  DatagramBuilder.h  DatagramHeader.cpp  DatagramHeader.h  EncryptionAuthenticator.cpp  EncryptionAuthenticator.h  EncryptionLayer.h  EncryptionLayerNull.h  EncryptionLayerSodium.cpp  EncryptionLayerSodium.h  Handshaker.cpp  Handshaker.h  HandshakerThreeWay.cpp  HandshakerThreeWay.h  PCH.cpp  PCH.h  Packet.cpp  PacketHeader.cpp  PacketHeader.h  PacketQueue.cpp  PacketQueue.h  Peer.cpp  Peer.h  PeerStats.cpp  ReassemblyBuffer.cpp  ReassemblyBuffer.h  ReceiptTracker.cpp  (+13 more)
source/platform/: .gitignore
source/platform/desktop/: CMakeLists.txt  PlatformConfig.cmake  RemoteAddressASIO.cpp  RemoteAddressASIO.h  SocketUDP.cpp  SocketUDP.h
tests/: BinaryStream.Tests.cpp  CMakeLists.txt  Peer.Tests.cpp
